Fixing some indent bugs

--- a/templates/attribute.twig
+++ b/templates/attribute.twig
@@ -1,12 +1,13 @@
 {% autoescape false %}
-    /**
-     * @var {{ field.type }} {{ field.name }}
+/**
+     * @var {{ field.type == 'enum' ? 'string' : field.type }} {{ field.name }}
      */
     protected ${{ field.name }};
     {% if field.type == 'enum' %}
+
     /**
      * @var array {{ field.name }}Options
      */
-    protected ${{ field.name }}Options = [{% for option in field.options %}'{{ option }}'{% endfor %}];
+    protected ${{ field.name }}Options = [{% for option in field.options %}'{{ option }}',{% endfor %}];
     {% endif %}
 {% endautoescape %}
